# intervals-icu-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  glama.json  openapi-spec.json  pyproject.toml  server.json
.claude/: settings.json
.claude/skills/add-tool/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/release-check/: SKILL.md
.claude/skills/release-write/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: openapi_diff.py
.github/workflows/: claude-code-review.yml  claude-review.yml  claude.yml  publish.yml  release.yml  test.yml  update-openapi.yml
docs/: architecture.md  chatgpt-connector.md  examples.md  remote-deployment.md  testing.md  tools.md
src/intervals_icu_mcp/: auth.py  client.py  custom_item_schemas.py  event_categories.py  middleware.py  models.py  server.py  sport_settings_format.py  workout_syntax.py
src/intervals_icu_mcp/tools/: _strava.py  activities.py  activity_analysis.py  activity_messages.py  athlete.py  curves.py  custom_items.py  event_management.py  events.py  performance.py  periodization.py  sport_settings.py  wellness.py
tests/: conftest.py  smoke_eval.json  test_activities_by_date.py  test_activities_read_tools.py  test_activity_analysis_tools.py  test_activity_messages_tools.py  test_activity_tools.py  test_athlete_branches.py  test_athlete_tools.py  test_curves_tools.py  test_custom_items_tools.py  test_delete_mode.py  test_event_tools.py  test_events_read_tools.py  test_gear_tools.py  test_header_credentials.py  test_histogram_tools.py  test_middleware_integration.py  test_multi_athlete_and_models.py  test_performance_tools.py  test_periodization_tools.py  test_server_cli.py  test_sport_settings_tools.py  test_strava_limitation.py  test_transport_integration.py  test_wellness_tools.py  test_workout_library_tools.py  test_workout_syntax.py
